--- a/site/style/base.css
+++ b/site/style/base.css
@@ -4,6 +4,12 @@ html {
   width: 100%;
 }
 
+input {
+  appearance: none;
+  border: none;
+  outline: none;
+}
+
 ::placeholder {
   color: #888888;
 }
@@ -11,12 +17,11 @@ html {
 /* Separate text styling; use for form elements
    where text styling is not inherited */
 .uni_text {
-  font-size: 1rem;
   font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
+
+  font-size: 1rem;
   font-weight: 800;
-  font-style: normal;
-  font-variation-settings: "wdth" 100;
+  font-style: italic;
 }
 
 #uni_layout {
