--- a/site/style/base.css
+++ b/site/style/base.css
@@ -32,7 +32,7 @@ input {
   margin: 0;
 
   background-color:  #333;
-  color: #444444;
+  color: #444;
 
   /* border: 1px solid #e77f00; */
 }
@@ -44,9 +44,10 @@ input {
   align-items: center;
   justify-content: center;
 
-  width: 2.5rem;
+  /* width: 4.25rem; */
   height: 2rem;
   margin: .5rem;
+  padding: 0 .25rem 0 .15rem;
 
   color: #ddd;
   background-color: rgb(0, 123, 255);
